--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   letter-spacing: 1px;
 }
 
+
 .overlay {
   width: 100%;
   height: 100%;
@@ -53,14 +54,8 @@ body {
 }
 
 .skillsSection {
-  background: linear-gradient(
-    270deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(15, 124, 5, 1) 0%,
-    rgba(0, 90, 143, 1) 100%
-  );
-  color: #fff;
+  background-color: rgb(27, 27, 27);
+  color: rgb(151, 150, 150);
 }
 
 .contactSection {
@@ -72,6 +67,8 @@ body {
     rgba(0, 90, 143, 1) 100%
   );
   color: #fff;
+  text-align: left;
+
 }
 
 .skill {
