--- a/css/style.css
+++ b/css/style.css
@@ -58,166 +58,12 @@ body {
   color: rgb(151, 150, 150);
 }
 
-.contactSection {
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(15, 124, 5, 1) 0%,
-    rgba(0, 90, 143, 1) 100%
-  );
-  color: #fff;
-  text-align: left;
-
-}
 
 .skill {
-  text-align: center;
+  text-align: left;
   margin-left: 10px;
 }
 
-.chart {
-  position: relative;
-  width: 152px;
-  height: 152px;
-  display: inline-block;
-  text-align: center;
-}
-
-.chart canvas {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.chart .percent {
-  color: #000;
-  line-height: 152px;
-  display: inline-block;
-  font-size: 35px;
-}
-
-.chart .percent:after {
-  content: "%";
-}
-
-.squareItem {
-  margin-top: 30px;
-  position: relative;
-}
-
-.squareInnerContainer {
-  position: relative;
-  padding: 50px 15px 35px;
-  text-align: center;
-  border: 2px solid #444;
-  border-top: none;
-}
-
-.squareInnerContainer:before,
-.squareInnerContainer:after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  width: 30%;
-  border-bottom: 2px solid #444;
-}
-
-.squareInnerContainer:before {
-  right: 0px;
-}
-
-.squareInnerContainer:after {
-  left: 0px;
-}
-
-.squareContent h2 {
-  font-size: 56px;
-  margin-bottom: 10px;
-  font-weight: 400;
-  color: linear-gradient(
-    270deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(19, 146, 7, 1) 0%,
-    rgba(0, 212, 255, 1) 100%
-  );
-}
-
-.squareContent h3 {
-  font-size: 13px;
-  font-weight: 600px;
-  margin: 0;
-}
-
-.squareIcon {
-  position: absolute;
-  left: 50%;
-  top: -30px;
-  width: 40%;
-  height: 50px;
-  font-size: 45px;
-  margin-left: -20%;
-  color: #444;
-}
-
-.contactButton {
-  color: #fff;
-  padding: 15px 20px;
-  display: inline-block;
-  margin-top: 20px;
-  border: 1px solid #fff;
-  border-radius: 2px;
-}
-
-.contactButton:hover {
-  text-decoration: none;
-  color: #ffff;
-  background: linear-gradient(
-    270deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(19, 146, 7, 1) 0%,
-    rgba(0, 212, 255, 1) 100%
-  );
-  opacity: 0.7;
-  transition: 0.3s;
-}
-
-.filter a {
-  color: #bdc3c7;
-  border: 1px solid #bdc3c7;
-  padding: 10px 18px;
-  display: block;
-}
-
-.filter li {
-  display: inline-block;
-  padding: 5px;
-}
-
-.filter .current {
-  background: linear-gradient(
-    270deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(19, 146, 7, 1) 0%,
-    rgba(0, 212, 255, 1) 100%
-  );
-  border-color: linear-gradient(
-    270deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(19, 146, 7, 1) 0%,
-    rgba(0, 212, 255, 1) 100%
-  );
-  color: #fff;
-}
-
-.filter {
-  text-align: center;
-  width: 100%;
-}
 
 .section .heading {
   text-align: center;
@@ -225,62 +71,7 @@ body {
   width: 100%;
 }
 
-.items li {
-  display: inline-block;
-  padding: 5px;
-}
 
-.itemsContainer {
-  width: 100%;
-}
-
-.items li img {
-  width: 100%;
-
-  -webkit-transition: all 0.2s linear, 1s;
-  -moz-transition: all 0.2s linear, 1s;
-  -o-transition: all 0.2s linear, 1s;
-  -ms-transition: all 0.2s linear, 1s;
-  -transition: all 0.2s linear, 1s;
-}
-
-.items .item {
-  position: relative;
-  display: block;
-  overflow: hidden;
-}
-
-.items .icons {
-  position: absolute;
-  width: 90px;
-  height: 40px;
-  left: 50%;
-  top: 50%;
-  margin: -20px auto 0 -47px;
-  text-align: center;
-  z-index: 3;
-}
-
-.items .icons i {
-  text-shadow: 2px 2px 8px #fff;
-  color: #fff;
-  font-size: 20px;
-  margin-top: 9px;
-}
-
-.items a {
-  width: 40px;
-  height: 40px;
-  background-color: rgba(12, 36, 97, 0.3);
-  position: relative;
-  display: inline-block;
-
-  -webkit-transition: all 0.2s linear, 0.5s;
-  -moz-transition: all 0.2s linear, 0.5s;
-  -o-transition: all 0.2s linear, 0.5s;
-  -ms-transition: all 0.2s linear, 0.5s;
-  -transition: all 0.2s linear, 0.5s;
-}
 
 .items .imageOverlay {
   width: 100%;
@@ -298,88 +89,24 @@ body {
   -transition: all 0.2s linear, 1s;
 }
 
-.items .item:hover .imageOverlay {
-  opacity: 1;
-}
-
-.items .openButton {
-  float: left;
-  left: -200px;
-}
-
-.items .projectLink {
-  float: right;
-  right: -200px;
-}
-
-.items .item:hover .openButton {
-  left: 0px;
-}
-
-.items .item:hover .projectLink {
-  right: 0px;
-}
-
-.items .item:hover img {
-  -webkit-transform: scale(1.05, 1.05);
-  -moz-transform: scale(1.05, 1.05);
-  -o-transform: scale(1.05, 1.05);
-  -ms-transform: scale(1.05, 1.05);
-  -transform: scale(1.05, 1.05);
-}
-
-.items {
-  padding: 0;
-}
-
-.copyrightSection {
-  background-color: #000;
-  color: #fff;
-  padding: 30px 5px;
-}
-
-.copyrightSection p {
-  margin: 0;
-}
-
 #navigation {
   background: linear-gradient(
     90deg,
     rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(15, 124, 5, 1) 0%,
-    rgba(0, 90, 143, 1) 100%
+    rgb(143, 0, 81) 100%
   );
   padding: 20px 10px;
   z-index: 100;
   width: 100%;
-}
-
-#navigation li {
-  padding: 0 10px;
-}
-
-#navigation li a {
   color: #fff;
+
 }
 
-#navigation li a:hover {
-  color: rgb(0, 57, 90);
-  opacity: 0.6;
-  transition: 0.3s;
-}
 
 .navbar-brand,
 .navbar-brand:hover {
-  color: #000;
+  color: #f8f4f4;
+  font-size: 34px;
 }
 
-.navbar-toggler-icon {
-  background: url(../img/menu.png);
-  background-size: 100%;
-}
 
-.fixedNav #navigation {
-  position: fixed;
-  top: 0;
-}
